--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
     },
     "typeRoots": ["./src/types", "./node_modules/@types"]
   },
-  "include": ["src"],
+  "include": ["src", "supabase/functions"],
   "references": []
 }
